# Provenance

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  spec.md  todo.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  benchmark.md
docs/adr/: ADR-001-microservices-from-p0.md
docs/plans/: provenance-requirements.md  remediation-plan.md  ui-redesign-plan.md
eval/: pyproject.toml
eval/golden/: eval_set.yaml  golden_set.yaml
eval/src/provenance_eval/: __init__.py  benchmark.py  benchmark_run.py  gate.py  golden.py  harness.py  metrics.py  smoke.py
eval/tests/: test_benchmark.py  test_gate.py  test_golden_set.py  test_license_audit.py  test_metrics.py  test_smoke_eval.py
ops/: docker-compose.gpu.yml  docker-compose.online.yml  docker-compose.qdrant.yml  docker-compose.yml  nats.conf  otel-collector.yaml  requirements.lock.txt
ops/sql/: catalog_init.sql
scripts/: fetch_corpus.py  gen_ts_contracts.py  ingest_corpus.py  license_audit.py  start.sh  start_vllm.sh  stop.sh
services/: pyproject.toml
services/src/provenance_services/: __init__.py  catalog.py  chunker.py  clients.py  crew.py  detection.py  docling_parser.py  embedder.py  extraction.py  extraction_engine.py  faiss_store.py  gateway.py  graph.py  graph_store.py  ingestion.py  model.py  ocr_engine.py  parse.py  parse_engine.py  pgvector_store.py  qdrant_store.py  query_agent.py  reranker.py  resolver.py  retrieval.py  saga.py  vector.py  vector_factory.py  vendor_stubs.py
services/tests/: test_chunker.py  test_crew.py  test_detection.py  test_docling_parser.py  test_embedder.py  test_extraction_engine.py  test_faiss_store.py  test_gateway.py  test_graph_store.py  test_ingestion.py  test_ingestion_e2e.py  test_model_app.py  test_ocr.py  test_parse_engine.py  test_parse_gate.py  test_pgvector_store.py  test_pipeline_e2e.py  test_qdrant_store.py  test_reranker.py  test_resolver.py  test_retrieval.py  test_saga.py  test_ui_gateway.py  test_ui_ingest.py  test_ui_query_path.py  test_vector_app.py  test_vector_factory.py
tests/e2e/: test_walking_skeleton.py
web/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.tsx
web/__tests__/: AgentPipeline.test.tsx  DomainConfirmCard.test.tsx  EntityGraph.test.tsx  KbSelector.test.tsx  RefusalCard.test.tsx  SagaStepper.test.tsx  SourceInspector.test.tsx  chat_multiturn.test.tsx  landing.test.tsx
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/ingest/: page.tsx
web/components/: AgentPipeline.tsx  CitationPanel.tsx  DomainConfirmCard.tsx  EntityGraph.tsx  KbSelector.tsx  RefusalCard.tsx  SagaStepper.tsx  SourceInspector.tsx
web/lib/: api.ts  contracts.gen.ts  types.ts
