[project]
name = "provenance"
version = "0.1.0"
description = "Provenance-aware RAG + Knowledge Graph system (monorepo root)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv.workspace]
members = ["packages/*", "services", "eval"]

[tool.uv.sources]
provenance-contracts = { workspace = true }
provenance-service = { workspace = true }
provenance-services = { workspace = true }

# Dev tooling shared across the workspace.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "reportlab>=4.0",  # test fixtures: synthesize born-digital PDFs
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages", "services"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# numpy's bundled stubs use 3.12-only `type` syntax that mypy rejects under py311; we don't
# type-check against numpy internals (it arrives transitively via PIL/rapidocr) — skip them.
# docling/docling_core are optional, heavy, untyped deps (the deep-parse path) — same treatment.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "docling.*", "docling_core.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services", "eval"]
