[project]
name = "provenance-eval"
version = "0.1.0"
description = "Eval harness: golden set + (P4) RAGAS/hallucination/detection gates"
requires-python = ">=3.11"
dependencies = [
    "provenance-contracts",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_eval"]
