[project]
name = "provenance-services"
version = "0.1.0"
description = "Provenance microservices (P0 walking skeleton)"
requires-python = ">=3.11"
dependencies = [
    "provenance-contracts",
    "provenance-service",
    "asyncpg>=0.29",
    "pdfplumber>=0.11",  # digital-first PDF parsing (MIT/pdfminer.six) — R61
    "faiss-cpu>=1.8",    # VectorStorePort adapter (MIT) — R21
    "kuzu>=0.4",         # embedded knowledge graph (MIT) — R22
    "fastembed>=0.3",    # local ONNX embeddings + reranker (Apache-2.0) — R66/R24
    "rank-bm25>=0.2",    # sparse retrieval for hybrid (Apache-2.0) — R24
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_services"]
