[project]
name = "provenance-services"
version = "0.1.0"
description = "Provenance microservices (P0 walking skeleton)"
requires-python = ">=3.11"
dependencies = [
    "provenance-contracts",
    "provenance-service",
    "asyncpg>=0.29",
    "pdfplumber>=0.11",  # digital-first PDF parsing (MIT/pdfminer.six) — R61
    "faiss-cpu>=1.8",    # VectorStorePort adapter (MIT) — R21
    "kuzu>=0.4",         # embedded knowledge graph (MIT) — R22
    "fastembed>=0.3",    # local ONNX embeddings + reranker (Apache-2.0) — R66/R24
    "rank-bm25>=0.2",    # sparse retrieval for hybrid (Apache-2.0) — R24
    "qdrant-client>=1.11",  # dedicated-server vector adapter (Apache-2.0) — R21
    "pgvector>=0.3",        # in-database vector adapter (PostgreSQL ext) — R21
    "rapidocr-onnxruntime>=1.3",  # OCR fallback for image-only pages (Apache-2.0) — R61
    "pypdfium2>=4.0",             # PDF page rendering for OCR (Apache-2.0/BSD) — R61
    "pillow>=10.0",               # image handling for OCR rendering (HPND/permissive) — R61
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_services"]
